qbittorrent/infra/qbittorrent-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: jellyfin
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: http
    cloudflare-tunnel-ingress-controller.strrl.dev/http-host-header: qbittorrent.rendonindustries.com
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: qbittorrent.rendonindustries.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
